# VantorEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DevConsole.py  Doxyfile  LICENSE  README.md  TODO.md  ThirdPartySoftware.txt  build.bat  build.sh  buildCrossWindows.sh  buildLinux.sh  buildSandbox.bat  buildWindows.bat  imgui.ini  mingw-toolchain.cmake  mkdocs.yml  toolchain-mingw.cmake  vtrg.py
Samples/Template/: CMakeLists.txt  README.md  Template.cpp  main.cpp
Sandbox/: Application copy.cpp  Application.cpp  Application_Cube.cpp  CMakeLists.txt  LoadMesh.hpp  common.h  impl.cpp  pch.hpp
Sandbox/Objects/: Geometry.hpp
Sandbox/scenes/: pbr_test.cpp  pbr_test.hpp
Source/: CHIFEngine.h  CMakeLists.txt  Vantor.h
Source/Audio/: chifAudioEngine.h  vantorAudioEngine.cpp  vantorAudioEngine.h
Source/Core/: chifApplication.cpp  chifVersion.cpp  chifVersion.h  vantorApplication.cpp  vantorApplication.hpp  vantorCanvas.hpp  vantorInitializer.cpp  vantorInitializer.hpp  vantorVersion.cpp  vantorVersion.h
Source/Core/BackLog/: chifBacklog.h  vantorBacklog.cpp  vantorBacklog.h
Source/Core/Debug/: chifInlineDebugger.cpp  vantorInlineDebugger.cpp  vantorInlineDebugger.h
Source/Core/JobSystem/: chifJobSystem.cpp  chifJobSystem.h  vantorJobSystem.cpp  vantorJobSystem.h
Source/Core/Resource/: vantorResource.cpp  vantorResource.hpp  vantorResourceLoader.cpp  vantorResourceLoader.hpp  vantorResourceManager.cpp  vantorResourceManager.hpp
Source/Core/ResourceManager/: chifResourceManager.cpp  chifResourceManager.hpp
Source/Core/Scene/: vantorScene.cpp  vantorScene.hpp  vantorSceneNode.cpp  vantorSceneNode.hpp
Source/Entity/: chifECS.cpp  chifECS.h  vantorECS.cpp  vantorECS.h
Source/GUI/: chifImgui.h  vantorImgui.cpp  vantorImgui.h
Source/GUI/Font/: chifFont.h  chifFontAtlas.cpp  chifFontAtlas.h  chifLabel.h  vantorFont.cpp  vantorFont.h  vantorFontAtlas.cpp  vantorFontAtlas.h  vantorFontUtils.cpp  vantorFontUtils.h  vantorLabel.cpp  vantorLabel.h
Source/Graphics/: chifCloudsModel.cpp  chifDrawableObject.h  chifLight.cpp  chifSceneElements.h  chifSkybox.cpp  chifSkybox.h  chifTexture.cpp  chifTexture.h  chifVolumetricClouds.cpp  chifVolumetricClouds.h  chifWater.h  vantorCloudsModel.cpp  vantorCloudsModel.h  vantorDrawableObject.cpp  vantorDrawableObject.h  vantorLight.cpp  vantorLight.h  vantorSceneElements.h  vantorSkybox.cpp  vantorSkybox.h  vantorTerrain.cpp  vantorTerrain.h  vantorTexture.cpp  vantorTexture.h  vantorVolumetricClouds.cpp  vantorVolumetricClouds.h  vantorWater.cpp  vantorWater.h
Source/Graphics/Camera/: chifCamera.cpp  chifCamera.hpp  vantorCamera.cpp  vantorCamera.hpp
Source/Graphics/RenderDevice/: chifRenderDevice.hpp  vantorRenderDevice.hpp
Source/Helpers/: chifFS.hpp  chifTimer.hpp  chifTypes.hpp  vantorColor.hpp  vantorFS.hpp  vantorMath.hpp  vantorString.hpp  vantorTimer.hpp  vantorTypes.hpp
Source/Math/: TODO
Source/Platform/: chifInput.hpp  chifWindow.cpp  chifWindow.h  vantorInput.cpp  vantorInput.hpp  vantorWindow.cpp  vantorWindow.h
Source/Utils/: constants.h  sdl2Utils.cpp  sdl2Utils.h  utils.cpp  utils.h
Source/valib/: TODO  valib.hpp
Source/vath/: TODO  vath.hpp
Vantor/Source/: CMakeLists.txt  VCommonImpl.cpp  VProfile.hpp  Vantor.h
examples/TestFramework/: CMakeLists.txt  README.md  TestFramework.cpp  build.bat  buildWindows.bat  main.cpp
src/: CHIFEngine.h  CHIFEngine.sln  CHIFEngine.vcxproj  CMakeLists.txt  imgui.ini  main.cpp  stb_image_impl.cpp
src/Audio/: chifAudioEngine.cpp  chifAudioEngine.h
src/Compile/: glad.c  stb_image.cpp  stb_image_write.cpp
src/Core/: chifApplication.cpp  chifApplication.h  chifApplication.hpp  chifInitializer.cpp  chifVersion.cpp  version.cpp  version.h
src/Debug/: CHIFEngine.exe.recipe  vc143.idb
src/DrawableObjects/: CloudsModel.cpp  CloudsModel.h  GUI.cpp  GUI.h  Skybox.cpp  Skybox.h  Terrain.cpp  Terrain.h  VolumetricClouds.cpp  VolumetricClouds.h  Water.cpp  Water.h  drawableObject.cpp  drawableObject.h  sceneElements.h
src/Engine/: BaseShader.cpp  BaseShader.h  Render2D.cpp  Render2D.h  ScreenSpaceShader.cpp  ScreenSpaceShader.h  Window.cpp  Window.h  buffers.cpp  buffers.h  constants.h  glError.cpp  glError.h  sceneElements.h  shader.cpp  shader.h  shaderUtils.cpp  shaderUtils.h  texture.cpp  texture.h  utils.cpp  utils.h  version.cpp  version.h
src/Entity/: chifECS.cpp
src/GUI/: ImguiGUI.cpp  ImguiGUI.h  chifFont.cpp  chifFont.h  chifImgui.cpp  font.cpp  font.h
src/Graphics/: CloudsModel.cpp  CloudsModel.h  Skybox.cpp  Skybox.h  Terrain.cpp  Terrain.h  VolumetricClouds.cpp  VolumetricClouds.h  Water.cpp  Water.h  chifCloudsModel.cpp  chifCloudsModel.h  chifDrawableObject.cpp  chifLight.cpp  chifLight.h  chifSkybox.cpp  chifTerrain.cpp  chifTerrain.h  chifTexture.cpp  chifTexture.h  chifWater.cpp  drawableObject.cpp  drawableObject.h  sceneElements.h  texture.cpp  texture.h
src/Helpers/: chifColor.hpp  chifMath.hpp  chifTimer.hpp
src/Include/: camera.h  ft2build.h  mesh.h  model.h  stb_image.h  stb_image_write.h
src/Platform/: Window.cpp  Window.h  chifInput.cpp  chifInput.hpp  chifWindow.cpp  chifWindow.h
src/Utils/: constants.h  sdl2Utils.cpp  sdl2Utils.h  utils.cpp  utils.h
src/core/: CMakeLists.txt  bezier.h  constants.h  framebuffer.h  main.cpp  shadows.h  version.cpp
src/graphics/: CloudsModel.cpp  CloudsModel.h  Skybox.cpp  Skybox.h  VolumetricClouds.cpp  VolumetricClouds.h  Water.cpp  Water.h  drawableObject.cpp  drawableObject.h
src/gui/: ImguiGUI.cpp  ImguiGUI.h  font.cpp  font.h
src/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_internal.h  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
src/platform/: Window.cpp  Window.h  glError.cpp  glError.h
src/resources/: sphere.mtl
src/shaders/: chifFontShader.vert  sky.frag
src/utilities/: constants.h  sdl2Utils.cpp  sdl2Utils.h  utils.cpp
testing/ns1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  output.map  run.sh
(+2012 files in other folders)
